# FalconTerm

./: .gitignore  LICENSE  NOTICE  Package.swift  README.md  bootstrap.sh  init-repo.sh  pyproject.toml
Sources/FalconTerm/: ContentView.swift  FalconTermApp.swift
Sources/SSHEngine/: SSHConnection.swift
Sources/SessionManager/: SessionStore.swift
Tests/FalconTermTests/: FalconTermTests.swift
resources/color_schemes/: default.json  monokai.json  solarized_dark.json  solarized_light.json
src/falconterm/: __init__.py  __main__.py  app.py
src/falconterm/models/: ids.py  session.py  settings.py
src/falconterm/services/: import_export.py  keyring_svc.py  logging_svc.py  paths.py  session_store.py  settings_store.py
src/falconterm/terminal/: emulator.py  keymap.py  renderer.py  widget.py
src/falconterm/transport/: base.py  factory.py  serial.py  ssh.py  telnet.py
src/falconterm/ui/: main_window.py  session_tab.py  session_tree.py  tab_area.py
src/falconterm/ui/dialogs/: color_editor.py  font_picker.py  known_hosts.py  quick_connect.py  session_edit.py  settings.py
src/falconterm/utils/: ansi_strip.py  asyncio_bridge.py  constants.py  logging_setup.py
tests/: test_ansi_strip.py  test_emulator.py  test_import_export.py  test_keymap.py  test_models.py  test_session_store.py
